Redesign LLM memory from single-row JSON blob to row-per-message schema
Memory-as-policy, messages-as-content separation with backend-agnostic
incremental persistence.

== SpaceChatMemoryStore — hash-based incremental updateMessages ==
- Messages stored individually at {scheme}:msg/{memId}/{position} via
  Router.writeToSpace (no backend coupling, no IdObj usage)
- SHA-256 content_hash with stable hashing (strips volatile name/type
  fields) enables O(window)-size diffing instead of full DELETE+INSERT
- Sequential position reads bounded by algorithm.message_count
- writtenPositions guard prevents step-5 eviction from undoing step-4 writes

== llm_memory schema — policy row + per-type message tables ==
- llm_memory: agent_id, name, algorithm TEXT (no mem JSON blob)
- Per-type tables (llm_message_system/user/ai/tool_result) for SQL search
- ~auto entry token in ExistingTableSchema: omits PK from INSERT, lets
  AUTO_INCREMENT/SERIAL assign the value — each mirror write creates a new row
- createTableFromRecord: SERIAL for PostgreSQL, AUTO_INCREMENT for MariaDB,
  plain INTEGER for SQLite (native auto-increment)
- ObjSQLSerializer.readMaybeJSON(): <uri> → Uri auto-detection

== Mirror fire-and-forget population ==
- Per-type tables populated on every new message via ~auto writes
- uri column links each typed row back to its KV message
- MIRRORED_HASHES keyed by memory VID prevents cross-session contamination
- User message contents.text flattened to text column for SQL readability

== mModel API additions ==
- addSystemMessage(String): user-facing system message injection
- mergeSystemMessages mirrors composed system messages to typed table
- memoryCapability reads algorithm.max instead of bare max field

== LLM_MEMORY_TYPE updated ==
- mem→LST_TYPE (resolved from */msg/* sub-path)
- algorithm→REC_TYPE (extensible: max, message_count, future algorithms)
- MAX convenience accessor removed from isaPredicate

== Tests ==
- AbstractTbleSpaceTest.testLLMMemoryWriteReadBack: 